# tagger

./: .clang-format  .gitignore  CMakeLists.txt  README.md
BacterialGenomes/: AccesionsWithClasses.tsv  README.md
SILVA/: README.md
src/: alphabet.h  bitvec.h  buildindex.cpp  classificationstrategy.h  definitions.h  fastq.cpp  fastq.h  indexhelpers.cpp  indexhelpers.h  indexinterface.cpp  indexinterface.h  logger.cpp  logger.h  reads.h  search.cpp  search.h  searchstrategy.h  seqfile.cpp  seqfile.h  substring.h  taggingMEM.cpp
src/bmove/: bmove.cpp  bmove.h  moverepr.cpp  moverepr.h  tagger_build_pfp.sh
src/parameters/: alignparameters.cpp  alignparameters.h  buildparameters.cpp  buildparameters.h  parameters.h
